# pozk-competition

./: Dockerfile  README.md
prover/: .gitignore  Cargo.toml
prover/src/: input.rs  main.rs
test/: test_inputs_1  test_inputs_2  test_miner_1  test_miner_2
verifier/: hardhat.config.js  package.json
verifier/circuits/: keccak.circom  sha256.circom  sha256_65.circom
verifier/circuits/lib/: sha256.circom
verifier/contracts/: ITask.sol  KeccakVerifier.sol  Sha25665Verifier.sol  Sha256Verifier.sol  ZKVM.sol  ZKVMVerifier.sol
verifier/contracts/risc0/: ControlID.sol  IRiscZeroVerifier.sol  RiscZeroGroth16Verifier.sol  StructHash.sol  Util.sol
verifier/scripts/: circuit.sh  deploy.js  mock-task.js  upgrade.js
zkvm-risc0/: Cargo.toml
zkvm-risc0/host/: Cargo.toml
zkvm-risc0/host/src/: main.rs
zkvm-risc0/methods/guest/: Cargo.toml
zkvm-risc0/pozk/: Cargo.toml
zkvm-risc0/pozk/src/: main.rs
zkvm/host/: Cargo.toml
zkvm/host/src/: main.rs
zkvm/methods/: Cargo.toml
zkvm/methods/guest/: Cargo.toml
zkvm/methods/guest/src/: main.rs
zkvm/pozk/: competition_elf_risc0  competition_elf_sp1
zkvm/pozk/src/: main.rs
zkvm/sp1/: Cargo.toml
zkvm/sp1/src/: main.rs
