[package]
name = "prover"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
anyhow = "1.0.79"
num-bigint = "=0.4.3"
bincode = "1.3"
hex = "0.4"
ethabi = "18.0"
tokio = "1.39"
reqwest = "0.12"
ark-bn254 = { version = "0.4", features = ["curve"] }
ark-ff = { version = "0.4", features = ["asm"] }
ark-ec = { version = "0.4" }
ark-circom = { git = "https://github.com/zypher-game/circom-compat" }